# image-steganography

./: CMakeLists.txt  README.md
example-pictures/: p3file.ppm  stop01.ppm
src/: App.cpp  App.h  BmpFileHandler.cpp  BmpFileHandler.h  PpmFileHandler.cpp  PpmFileHandler.h  image-steganography.cpp
